:package: form orcamento

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <span>Fechar</span>
       </div>
 
+      <!-- cabeçalho -->
       <header>
         <div class="img-wrapper">
           <img src="img/bg.jpg" alt="Plano de Fundo" />
@@ -28,12 +29,13 @@
         <div class="banner">
           <h1>Frontend Designer and Web Developer</h1>
           <p>Thomas D. Ribeiro</p>
-          <button>Saiba mais</button>
+          <button class="btn">Saiba mais</button>
         </div>
       </header>
 
+      <!-- menu -->
       <!-- prettier-ignore -->
-      <div class="sidebar">
+      <aside class="sidebar">
         <nav>
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -44,13 +46,218 @@
           </ul>
         </nav>
 
+        <!-- redes sociais -->
         <div class="social-media">
           <a href="#"><i class="fab fa-github-alt"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
-      </div>
+      </aside>
+
+      <!-- conhecimentos -->
+      <section class="sessao-conhecimentos">
+        <div class="sessao-header">
+          <h1>Conhecimentos</h1>
+        </div>
+        <div class="conhecimentos">
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-html5"></i>
+              <h3>HTML</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                cupiditate ex, autem quae doloremque, nesciunt a veritatis modi,
+                illo asperiores velit. Doloribus ut minus libero at, laudantium
+                sit provident sed.
+              </p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-css3-alt"></i>
+              <h3>CSS</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                consequatur laborum dignissimos consequuntur temporibus
+                laudantium nisi, provident porro asperiores iste architecto ab
+                deserunt neque laboriosam vitae repellat expedita at quaerat.
+              </p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fas fa-pencil-alt"></i>
+              <h3>Design</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                fugiat consequuntur, suscipit soluta harum voluptatum similique
+                enim debitis unde, sed, nostrum expedita labore hic quasi? Iusto
+                repellendus veniam minus cupiditate.
+              </p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-js"></i>
+              <h3>JavaScript</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem
+                voluptate voluptas deleniti rem eveniet unde aliquam cumque nam
+                excepturi, explicabo temporibus repudiandae in aliquid ea at ad?
+                Illum, numquam fugit.
+              </p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-bootstrap"></i>
+              <h3>Bootstrap</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+                consequatur accusamus iure, sunt incidunt vitae, quasi ullam
+                omnis aperiam corrupti deleniti, nisi ducimus accusantium quam
+                sapiente possimus blanditiis consequuntur veniam.
+              </p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-github"></i>
+              <h3>Git e Github</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                nulla expedita vero harum, laborum fugiat optio iusto!
+                Cupiditate quod placeat nisi harum maiores facere, aperiam, id
+                ad tenetur omnis dolores!
+              </p>
+            </div>
+          </div>
+          <div class="conhecimentos-img-wrapper">
+            <img src="img/conhecimentos.png" alt="Imagem conhecimento" />
+          </div>
+        </div>
+      </section>
+
+      <!-- projetos -->
+      <section class="sessao-projetos">
+        <div class="sessao-header">
+          <h1>Projetos</h1>
+        </div>
+        <div class="projetos">
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="img/projeto1.jpg" alt="imagem do projeto ToDo" />
+            </div>
+            <div class="card-info">
+              <h2>ToDo List</h2>
+              <h3>Javascript</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Cupiditate ducimus vero maxime amet magnam doloribus eos
+                consequatur expedita architecto hic?
+              </p>
+              <button class="btn">Saiba mais</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="img/projeto2.jpg" alt="imagem do projeto Maratona" />
+            </div>
+            <div class="card-info">
+              <h2>Maratona</h2>
+              <h3>HTML, CSS</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam
+                consectetur ab facilis cumque.
+              </p>
+              <button class="btn">Saiba mais</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="img/projeto3.jpg" alt="imagem do projeto Casa Bela" />
+            </div>
+            <div class="card-info">
+              <h2>Casa Bela</h2>
+              <h3>HTML</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                pariatur soluta doloremque tempore nisi placeat, eveniet
+                voluptate recusandae. Eius, sapiente?
+              </p>
+              <button class="btn">Saiba mais</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- contato -->
+      <section class="sessao-contato">
+        <div class="contato-wrapper">
+          <div class="contato-left"></div>
+
+          <div class="contato-right">
+            <h1>Contato</h1>
+            <!-- prettier-ignore -->
+            <form>
+              <div class="input-group">
+                <input type="text" class="field" id="nome"/>
+                <label for="nome" class="field-label">Nome</label>
+              </div>
+              <div class="input-group">
+                <input type="text" class="field" id="email"/>
+                <label for="email" class="field-label">E-mail</label>
+              </div>
+              <div class="input-group">
+                <textarea class="field" id="mensagem"></textarea>
+                <label for="mensagem" class="field-label">Mensagem</label>
+              </div>
+              <button type="submit" class="btn btn-submit">Enviar</button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <!-- orçamento -->
+      <section class="sessao-orcamento">
+        <div class="orcamento-wrapper">
+          <h1>Faça um orçamento</h1>
+          <form>
+            <label for="qtd">Quantidade de páginas</label>
+            <input type="number" min="1" name="qtd" id="qtd" />
+            <label for="js">Preciso de um script JS</label>
+            <input type="checkbox" name="js" id="js" />
+            <label>Layout</label>
+            <div class="group-layout">
+              <div>
+                <input type="radio" name="layout" id="layout-sim" />
+                <label for="layout-sim">Preciso de um layout</label>
+              </div>
+              <div>
+                <input type="radio" name="layout" id="layout-nao" />
+                <label for="layout-nao">Já tenho um layout</label>
+              </div>
+            </div>
+            <label for="prazo">Prazo</label>
+            <input type="range" name="prazo" id="prazo" />
+            <button class="btn btn-orcamento" type="submit">Enviar</button>
+          </form>
+        </div>
+      </section>
     </div>
   </body>
 
