--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <!-- cabeçalho -->
-      <header>
+      <header id="home">
         <div class="img-wrapper">
           <img src="img/bg.jpg" alt="Plano de Fundo" />
         </div>
@@ -39,10 +39,10 @@
         <nav>
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+            <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
+            <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+            <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+            <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
           </ul>
         </nav>
 
@@ -50,13 +50,12 @@
         <div class="social-media">
           <a href="#"><i class="fab fa-github-alt"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </aside>
 
       <!-- conhecimentos -->
-      <section class="sessao-conhecimentos">
+      <section class="sessao-conhecimentos" id="conhecimentos">
         <div class="sessao-header">
           <h1>Conhecimentos</h1>
         </div>
@@ -152,7 +151,7 @@
       </section>
 
       <!-- projetos -->
-      <section class="sessao-projetos">
+      <section class="sessao-projetos" id="projetos">
         <div class="sessao-header">
           <h1>Projetos</h1>
         </div>
@@ -206,7 +205,7 @@
       </section>
 
       <!-- contato -->
-      <section class="sessao-contato">
+      <section class="sessao-contato" id="contato">
         <div class="contato-wrapper">
           <div class="contato-left"></div>
 
@@ -233,7 +232,7 @@
       </section>
 
       <!-- orçamento -->
-      <section class="sessao-orcamento">
+      <section class="sessao-orcamento" id="orcamento">
         <div class="orcamento-wrapper">
           <h1>Faça um orçamento</h1>
           <form>
@@ -253,11 +252,32 @@
               </div>
             </div>
             <label for="prazo">Prazo</label>
-            <input type="range" name="prazo" id="prazo" />
+            <input type="range" name="prazo" id="prazo" min="1" max="10" />
+            <label id="preco">R$ 0,00</label>
             <button class="btn btn-orcamento" type="submit">Enviar</button>
           </form>
         </div>
       </section>
+
+      <!-- rodapé -->
+      <footer>
+        <div class="footer-content">
+          <p>Copyright &copy; 2021, TH - Todos os direitos reservados.</p>
+        </div>
+        <!-- prettier-ignore -->
+        <div class="social-list">
+          <ul>
+            <li><a href="#"><i class="fab fa-github-alt"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter></i" ></a></li>
+          </ul> 
+        </div>
+      </footer>
+
+      <a href="#home" id="link-topo">
+        <i class="fas fa-arrow-up"></i>
+      </a>
     </div>
   </body>
 
