--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class="- btn btn-primary rounded ml-4" href="components.html">Fale comigo!</a>
+                        <a class="- btn btn-primary rounded ml-4" href="#">Fale comigo!</a>
                     </li>
                 </ul>
             </div>
